Implement rest endpoint to post a notification for delivery
