# central/api/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-06-23T09:30:08+00:00
+#   timestamp: 2024-11-28T05:20:41+00:00
 
 from __future__ import annotations
 
@@ -14,6 +14,13 @@ from uuid import UUID
 class HostStatus(BaseModel):
     ipv4Public: IPv4Address = Field(
         ..., description='External IPv4 address for the host.'
+    )
+
+
+class Notification(BaseModel):
+    title: str = Field(..., description="Notification's title")
+    content: str = Field(
+        ..., description="Notification's body. Emojis are allowed here."
     )
 
 
